<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Budgeter</string>
    <string name="title_section1">Transactions</string>
    <string name="title_section2">Budgets</string>
    <string name="title_section3">Accounts</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add">Add Item</string>
    <string name="action_settings">Settings</string>
    <string name="new_acct">New Account</string>
    <string name="name">Name:</string>
    <string name="type">Account Type:</string>
    <string name="balance">Balance:</string>
    <string name="limit">Credit Limit:</string>
    <string name="notes">Notes:</string>
    <string name="default_acct">Default Account (Will override any previous default account)</string>
    <string name="in_total">Include in Total Account Balance</string>

    <string-array name="acct_types">
        <item>Checking</item>
        <item>Savings</item>
        <item>Credit Card</item>
    </string-array>

</resources>
