<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:inputType="textCapWords"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="14sp"/>
    <Spinner
        android:id="@+id/acct_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/default_acct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_acct"
        android:textSize="14sp"/>
    <CheckBox
        android:id="@+id/in_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_total"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/text_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limit"
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:textSize="14sp"/>

</LinearLayout>